[Publishing] POM profiles for publishing to Github Packages and Maven Central. CI job for Github Packages. Readme info for deployment to Maven Central. (#11)
* [PresetnationRequestRepoDto] proto added.

* [POM] profiles added.

* [OSSRH] profile.

* [POM] props.

* [Pom] ref inline docs.

* [Readme]

* [Maven] centeral ci try.

* [POM] removed local key name.

* [Maven] java version to 11 from 16.

* [target 11]

* [gpg.key]

* [pom] version snapshot.

* [ci] debugging.

* [ci] setting print.

* [settings

* [GPG] keyname made an env var.

* [CI] removed maven central.

* [ci]

* [clean up]

* clean up